--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: ActSynt Highlights of Reasoning about Actions, Planning and Reactive Synthesis 
+title: ActSynt <br> Highlights of Reasoning about Actions, Planning and Reactive Synthesis 
 subtitle: Held as part of ECAI 2024, Spain
 ---
