--- a/index.html
+++ b/index.html
@@ -3,3 +3,12 @@ layout: home
 title: ActSynt <br> Highlights of Reasoning about Actions, Planning and Reactive Synthesis 
 subtitle: Held as part of ECAI 2024, Spain
 ---
+
+
+<style>
+  body {
+    font-family: 'Roboto', 'Arial', sans-serif;
+    background-color: #F8F9FA;
+    background: linear-gradient(135deg, #E3F2FD 0%, #F8F9FA 100%);
+  }
+</style>
