--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: ActSynt <br> Highlights of Reasoning about Actions, Planning and Reactive Synthesis 
+title: Highlights of Reasoning about Actions, Planning and Reactive Synthesis 
 subtitle: Held as part of ECAI 2024, Spain
 ---
 
