--- a/index.html
+++ b/index.html
@@ -5,3 +5,19 @@ subtitle: Held as part of ECAI 2024, Spain
 ---
 
 
+The fields of Reasoning about Actions and Planning in AI are undergoing rapid advancements, incorporating concepts and techniques from Reactive Synthesis and Strategic Reasoning, originally developed in Formal Methods. 
+In recent years, the focus has evolved beyond standard forms of reasoning, such as action sequence executability and future effects (projection), 
+to encompass more sophisticated modes of reasoning. This evolution has led to the identification of common points with other prominent areas of CS, facilitating a richer interdisciplinary discourse.
+A noteworthy convergence is observed between Reactive Synthesis in Formal Methods. Reactive Synthesis is based on the idea of constructing trustworthy-by-design systems that meet their specifications.  
+This approach is of particular interest in designing autonomous intelligent systems that can react to changing environments and make decisions accordingly. 
+A breakthrough in this field, developed in AI and inspired by classical AI planning, is the focus of LTL on finite traces (LTLf). A key feature of working with finite traces is the possibility to 
+rely on standard finite-state automata, rather than the more complex omega-automata required for infinite traces. The focus on LTLf has paved the way for practical implementation and 
+scalability of LTLf synthesis for building autonomous synthesis, marking a significant improvement in the field. 
+Furthermore, the integration of Reasoning about Actions and Planning is expanding its connections to various forms of synthesis, including generalized planning, 
+Markov Decision Processes/Reinforcement Learning (MDPs/RL), supervisory control, and more. However, navigating this evolving landscape is challenging due to the dispersion of relevant research across numerous conferences and venues.
+<br>
+Drawing upon a successful format followed in other fields (e.g.,Highlights of Logic, Games and Automata and On the Effectiveness of Temporal Logics on Finite Traces in AI), 
+the workshop aims to offer a wide picture of the latest research in the field in order to foster a common space to discuss current results and future 
+directions and to facilitate the emergence of teams working across different areas. 
+
+
