--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Highlights of Reasoning about Actions, Planning and Reactive Synthesis
 subtitle: Held as part of ECAI 2024, Spain
 ---
 
-
+<p align="justify">
 The fields of Reasoning about Actions and Planning in AI are undergoing rapid advancements, incorporating concepts and techniques from Reactive Synthesis and Strategic Reasoning, originally developed in Formal Methods. 
 In recent years, the focus has evolved beyond standard forms of reasoning, such as action sequence executability and future effects (projection), 
 to encompass more sophisticated modes of reasoning. This evolution has led to the identification of common points with other prominent areas of CS, facilitating a richer interdisciplinary discourse.
@@ -15,9 +15,9 @@ rely on standard finite-state automata, rather than the more complex omega-autom
 scalability of LTLf synthesis for building autonomous synthesis, marking a significant improvement in the field. 
 Furthermore, the integration of Reasoning about Actions and Planning is expanding its connections to various forms of synthesis, including generalized planning, 
 Markov Decision Processes/Reinforcement Learning (MDPs/RL), supervisory control, and more. However, navigating this evolving landscape is challenging due to the dispersion of relevant research across numerous conferences and venues.
-<br>
+<br> <br>
 Drawing upon a successful format followed in other fields (e.g.,Highlights of Logic, Games and Automata and On the Effectiveness of Temporal Logics on Finite Traces in AI), 
 the workshop aims to offer a wide picture of the latest research in the field in order to foster a common space to discuss current results and future 
 directions and to facilitate the emergence of teams working across different areas. 
-
+</p>
 
