--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ A noteworthy convergence is observed between Reactive Synthesis in Formal Method
 This approach is of particular interest in designing autonomous intelligent systems that can react to changing environments and make decisions accordingly. 
 A breakthrough in this field, developed in AI and inspired by classical AI planning, is the focus of LTL on finite traces (LTLf). A key feature of working with finite traces is the possibility to 
 rely on standard finite-state automata, rather than the more complex omega-automata required for infinite traces. The focus on LTLf has paved the way for practical implementation and 
-scalability of LTLf synthesis for building autonomous synthesis, marking a significant improvement in the field. 
+scalability of LTLf synthesis for building autonomous synthesis, marking a significant improvement in the field. <br>
 Furthermore, the integration of Reasoning about Actions and Planning is expanding its connections to various forms of synthesis, including generalized planning, 
 Markov Decision Processes/Reinforcement Learning (MDPs/RL), supervisory control, and more. However, navigating this evolving landscape is challenging due to the dispersion of relevant research across numerous conferences and venues.
 <br> <br>
