--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ subtitle: Held as part of ECAI 2024, Spain
 <p align="justify">
 The fields of Reasoning about Actions and Planning in AI are undergoing rapid advancements, incorporating concepts and techniques from Reactive Synthesis and Strategic Reasoning, originally developed in Formal Methods. 
 In recent years, the focus has evolved beyond standard forms of reasoning, such as action sequence executability and future effects (projection), 
-to encompass more sophisticated modes of reasoning. This evolution has led to the identification of common points with other prominent areas of CS, facilitating a richer interdisciplinary discourse.
+to encompass more sophisticated modes of reasoning. This evolution has led to the identification of common points with other prominent areas of CS, facilitating a richer interdisciplinary discourse.<br>
 A noteworthy convergence is observed between Reactive Synthesis in Formal Methods. Reactive Synthesis is based on the idea of constructing trustworthy-by-design systems that meet their specifications.  
 This approach is of particular interest in designing autonomous intelligent systems that can react to changing environments and make decisions accordingly. 
 A breakthrough in this field, developed in AI and inspired by classical AI planning, is the focus of LTL on finite traces (LTLf). A key feature of working with finite traces is the possibility to 
