--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ The fields of Reasoning about Actions and Planning in AI are undergoing rapid ad
 In recent years, the focus has evolved beyond standard forms of reasoning, such as action sequence executability and future effects (projection), 
 to encompass more sophisticated modes of reasoning. This evolution has led to the identification of common points with other prominent areas of CS, facilitating a richer interdisciplinary discourse.<br>
 A noteworthy convergence is observed between Reactive Synthesis in Formal Methods. Reactive Synthesis is based on the idea of constructing trustworthy-by-design systems that meet their specifications.  
-This approach is of particular interest in designing autonomous intelligent systems that can react to changing environments and make decisions accordingly. <br>
+This approach is of particular interest in designing autonomous intelligent systems that can react to changing environments and make decisions accordingly.
 Furthermore, the integration of Reasoning about Actions and Planning is expanding its connections to various forms of synthesis, including generalized planning, 
 Markov Decision Processes/Reinforcement Learning (MDPs/RL), supervisory control, and more. However, navigating this evolving landscape is challenging due to the dispersion of relevant research across numerous conferences and venues.
 <br> <br>
