--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ This approach is of particular interest in designing autonomous intelligent syst
 Furthermore, the integration of Reasoning about Actions and Planning is expanding its connections to various forms of synthesis, including generalized planning, 
 Markov Decision Processes/Reinforcement Learning (MDPs/RL), supervisory control, and more. However, navigating this evolving landscape is challenging due to the dispersion of relevant research across numerous conferences and venues.
 <br> <br>
-Drawing upon a successful format followed in other fields (e.g.,<a> href="http://highlights-conference.org/">Highlights of Logic, Games and Automata</a>  and <a> href="https://ltlf-symposium.github.io/">On the Effectiveness of Temporal Logics on Finite Traces in AI</a>), 
+Drawing upon a successful format followed in other fields (e.g.,<a href="http://highlights-conference.org/">Highlights of Logic, Games and Automata</a>  and <a href="https://ltlf-symposium.github.io/">On the Effectiveness of Temporal Logics on Finite Traces in AI</a>), 
 the workshop aims to offer a wide picture of the latest research in the field in order to foster a common space to discuss current results and future 
 directions and to facilitate the emergence of teams working across different areas. 
 </p>
