--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ to encompass more sophisticated modes of reasoning. This evolution has led to th
 A noteworthy convergence is observed between Reactive Synthesis in Formal Methods. Reactive Synthesis is based on the idea of constructing trustworthy-by-design systems that meet their specifications.  
 This approach is of particular interest in designing autonomous intelligent systems that can react to changing environments and make decisions accordingly.
 Furthermore, the integration of Reasoning about Actions and Planning is expanding its connections to various forms of synthesis, including generalized planning, 
-Markov Decision Processes/Reinforcement Learning (MDPs/RL), supervisory control, and more. However, navigating this evolving landscape is challenging due to the dispersion of relevant research across numerous conferences and venues.
+Markov Decision Processes/Reinforcement Learning, supervisory control, and more. However, navigating this evolving landscape is challenging due to the dispersion of relevant research across numerous conferences and venues.
 <br> <br>
 Drawing upon a successful format followed in other fields (e.g.,<a href="http://highlights-conference.org/">Highlights of Logic, Games and Automata</a>  and <a href="https://ltlf-symposium.github.io/">On the Effectiveness of Temporal Logics on Finite Traces in AI</a>), 
 the workshop aims to offer a wide picture of the latest research in the field in order to foster a common space to discuss current results and future 
