--- a/index.html
+++ b/index.html
@@ -52,3 +52,9 @@ directions and to facilitate the emergence of teams working across different are
     <li>Workflow Management</li>
 </ul>
 
+<h3>Important Dates</h3>
+<ul>
+  <li> <b>June 14, 2024</b>: Paper submission deadline (AoE). </li>
+  <li> <b>July 1 , 2024</b>: Author notification (AoE). </li>
+</ul>
+
