--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Highlights of Reasoning about Actions, Planning and Reactive Synthesis 
-subtitle: Held as part of ECAI 2024, Santiago de Compostela, Spain
+subtitle: Held as part of ECAI 2024, 19 October, 2024, Santiago de Compostela, Spain
 ---
 
 <p align="justify">
@@ -57,5 +57,6 @@ directions and to facilitate the emergence of teams working across different are
 <ul>
   <li> <b>June 14, 2024</b>: Paper submission deadline (AoE). </li>
   <li> <b>July 1, 2024</b>: Author notification (AoE). </li>
+  <li> <b>October 19, 2024</b>: Workshop </li>
 </ul>
 
