--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ directions and to facilitate the emergence of teams working across different are
 <h3>Important Dates</h3>
 <br>
 <ul>
-  <li> <b>June 14, 2024</b>: Paper submission deadline (AoE). </li>
-  <li> <b>July 1, 2024</b>: Author notification (AoE). </li>
+  <li> <s>June 14, 2024 </s><b>July 1, 2024 (AoE)</b>: Paper submission deadline (AoE). </li>
+  <li>  <s>July 1, 2024 </s> <b>July 13, 2024</b>: Author notification (AoE). </li>
   <li> <b>October 19, 2024</b>: Workshop </li>
 </ul>
 
